fixed footer overlap and navbar is now always at the top (even when scrolling)

--- a/simple_social/static/simple_social/css/style.css
+++ b/simple_social/static/simple_social/css/style.css
@@ -6,8 +6,9 @@
     background-color: white !important;
 }
 
-#before-footer {
+#main-content {
     padding-bottom: 120px;
+    padding-top: 120px;
 }
 
 .footer {
